src/unit_tests/TypeChecker/fail/let1.cl
class Main {
    main() : Int {
        {
            let x : Int <- x + 1 in 5;
            1;
        }
    };
};